@@ -8,9 +8,10 @@ public class EscapeRoom {
     private String name;
 
     public EscapeRoom(String name) {
-        if (name == null || name.isBlank()) {
+        if (name == null || name.trim().isEmpty()) {
             throw new InvalidNameException();
         }
+
         this.name = name;
     }
 
@@ -27,7 +28,7 @@ public class EscapeRoom {
     }
 
     public void setName(String name) {
-        if (name == null || name.isBlank()) {
+        if (name == null || name.trim().isEmpty()) {
             throw new InvalidNameException();
         }
         this.name = name;
@@ -35,10 +36,6 @@ public class EscapeRoom {
 
     @Override
     public String toString() {
-        return "EscapeRoom{id=" + id + ", name='" + name + "'}";
+        return "EscapeRoom { id: " + id + ", name: " + name + " }";
     }
 }
-
-
-
-
